--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ ul,ol,li{
 body{
     font-family: "Righteous", sans-serif;
     background-color: #F5CF06;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 header{
@@ -35,6 +38,7 @@ header h1{
     color: #8E4106;
     font-weight: 400;
 }
+
 
 section{
     display: flex;
@@ -56,7 +60,7 @@ h2{
 .pikachu-menor{
     font-size: 300px;
     position: relative;
-    bottom: 290px;
+    bottom: 170px;
 }
 
 section img{
@@ -98,6 +102,7 @@ div button{
     height: 100px;
     font-size: 48px;
     text-transform: bold;
+    border: none;
 }
 
 div button img{
@@ -110,9 +115,90 @@ footer{
     justify-content: center;
     padding-right: 60px;
     color: #8E4106;
+    height: 0px;
 }
 
 footer p{
     position: absolute;
     top: 900px;
+}
+
+
+/*TABLET*/
+
+@media(max-width: 1024px){
+    
+    header{
+        position: absolute;
+        padding-top: 30px;
+        padding-left: 30px;
+    }
+
+    main{
+        padding-top: 30px;
+    }
+
+    .pikachu-maior{
+        font-size: 200px;
+    }
+
+    .pikachu-menor{
+        font-size: 180px;
+    }
+
+    section img{
+        top: 230px;
+    }
+
+    div{
+        bottom: 0;
+        flex-direction: column;
+        gap: 16px;
+        text-align: center;
+        align-items: center;
+    }
+
+    footer{
+        display: none;
+    }
+}
+
+/*CELULAR*/
+
+@media(max-width: 768px){
+
+    main section{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 20px;
+    }
+
+
+    .pikachu-maior{
+        font-size: 100px;
+    }
+
+    .pikachu-menor{
+        font-size: 80px;
+        bottom: 65px;
+    }
+
+    section img{
+        height: 323px;
+        top: 165px;
+    }
+
+    div section h3{
+        font-size: 40px;
+    }
+
+    div section p{
+        display: none;
+    }
+
+    div button{
+        width: 312px;
+        height: 100px;
+    }
 }
